--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "gatsby-source-contentful": "^2.3.17",
     "gatsby-transformer-remark": "^2.8.18",
     "gatsby-transformer-sharp": "^2.5.6",
-    "gh-pages": "^3.1.0",
     "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -23,6 +22,7 @@
   },
   "devDependencies": {
     "contentful-import": "^7.8.6",
+    "gh-pages": "^3.2.0",
     "netlify-cli": "^2.54.0"
   },
   "engines": {
@@ -41,6 +41,7 @@
     "url": "git+https://github.com/contentful/starter-gatsby-blog.git"
   },
   "scripts": {
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "dev": "gatsby develop",
     "build": "gatsby build",
     "heroku-postbuild": "gatsby build",
