--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,13 @@
 name: Gatsby Publish
-
 on:
   push:
     branches:
       - main
-
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - name: Setup Node
-        uses: actions/setup-node@v1
+      - uses: enriikke/gatsby-gh-pages-action@v2
         with:
-          node-version: '12.x'
-      - name: build
-        run: |
-          npm ci
-          npm run build -- --prefix-paths
-      - uses: peaceiris/actions-gh-pages@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: ./public
+          access-token: ${{ secrets.ACCESS_TOKEN }}
