--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "contentful-import": "^7.8.6",
+    "dotenv": "^10.0.0",
     "gh-pages": "^3.2.0",
     "netlify-cli": "^2.54.0"
   },
